Tue May  1 14:17:06 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Ported SILC Socket Stream API, SILC Net API, SILC Schedule API,
	  and other smaller APIs to WIN32.  Affected files are in
	  lib/silcutil/win32/.

	* Changed the various regex APIs as generic code in util library.
	  Affected files are lib/silcutil/silcstrutil.[ch].

Sat Apr 28 13:47:47 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Ported SILC Server to the new Toolkit API, working towards
	  SILC Server 1.1.  Affected files are in apps/silcd/.

	* Added silc_skr_del_public_key, silc_skr_[ref|unref]_public_key
	  to lib/silcskr/silcskr.[ch].

	* Fixed SILC public key copying to copy the identifier also.
	  Affected file is lib/silccrypt/silcpk.c.

	* Added silc_packet_error_string to lib/silccore/silcpacket.[ch].

	* Fixed OPER and SILCOPER passphrase asking in Client library.
	  Affected file is lib/silcclient/command.c.

Tue Apr 24 17:55:24 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Fixed command queue enabling after connecting to server.
	  The comparisons was from after changing to silc_utf8_strcasecmp.
	  Affected file is apps/irssi/src/silc/core/silc-servers.c.

	* Fixed nickname setting with own client entry with 1.3 protocol
	  version server.  Affected file lib/silcclient/client_register.c.

	* Ignore error notify for local client entry.  Affected file is
	  lib/silcclient/client_notify.c.

	* Implemented responder rekey to SKE library.  Affected files are
	  lib/silcske/silcske.[ch].

	* Fixed connection auth protocol completion sending.  Affected
	  file lib/silcske/silcconnauth.c.

Mon Apr 23 17:20:01 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Do not call TCP network listener callback with any error
	  status, as documented.  Affected file is
	  lib/silcutil/unix/silcunixnet.c.

Sun Apr 22 21:13:28 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Preliminary SILC Server 1.1 changes committed to apps/silcd/.
