@@ -1,3 +1,9 @@
+Wed May  2 11:38:17 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
+
+	* Set the server and router operator modes to local entry after
+	  successful OPER or SILCOPER commands.  Affected file is
+	  lib/silcclient/command_reply.c.
+
 Tue May  1 14:17:06 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
 
 	* Ported SILC Socket Stream API, SILC Net API, SILC Schedule API,
